<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/stats_top_competence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats_top_competence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/RegularTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/layout_top_competence"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stats_top_competence"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/stats_total_level_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats_total_level"
        app:layout_constraintTop_toBottomOf="@id/layout_top_competence"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/RegularTitle"/>

    <TextView
        android:id="@+id/stats_total_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats_top_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_total_level_label"
        style="@style/RegularTitle"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/stats_last_competence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats_last_competence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_total_level"
        style="@style/RegularTitle"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/layout_last_competence"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/stats_last_competence"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>