<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/competence_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UNDEFINED"
        android:textAlignment="center"
        style="@style/PopupTitle"/>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RegularTitle"
        android:text="@string/popup_details_description" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/tags_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_details_tags"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tags_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Niveau" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/decrease_level_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_popup_level_minus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>

        <TextView
            android:id="@+id/level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/decrease_level_button"
            app:layout_constraintEnd_toStartOf="@id/increase_level_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageButton
            android:id="@+id/increase_level_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_popup_level_plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_button_delete"
        android:icon = "@drawable/ic_delete"/>


</LinearLayout>